@@ -38,6 +38,9 @@
    - djm@cvs.openbsd.org 2006/07/06 10:47:05
      [servconf.c servconf.h session.c sshd_config.5]
      support arguments to Subsystem commands; ok markus@
+   - djm@cvs.openbsd.org 2006/07/06 10:47:57
+     [sftp-server.8 sftp-server.c]
+     add commandline options to enable logging of transactions; ok markus@
 
 20060706
  - (dtucker) [configure.ac] Try AIX blibpath test in different order when
@@ -4771,4 +4774,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4369 2006/07/10 10:36:47 djm Exp $
+$Id: ChangeLog,v 1.4370 2006/07/10 10:46:55 djm Exp $
